--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,22 @@
 server.port=2020
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sdp3
+#spring.datasource.url=jdbc:mysql://localhost:3306/sdp3
 
-#spring.datasource.url=jdbc:mysql://myprojectdatabase.c1xw7igy2wnl.us-east-1.rds.amazonaws.com/sdp3
+spring.datasource.url=jdbc:mysql://myprojectdatabase.c1xw7igy2wnl.us-east-1.rds.amazonaws.com/sdp3
 
 spring.datasource.username= root
 
-spring.datasource.password=root
+#spring.datasource.password=root
 
-#spring.datasource.password=password
+spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 
-spring.jpa.properties.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
